--- a/src/Styles/Upgrades.css
+++ b/src/Styles/Upgrades.css
@@ -1,7 +1,7 @@
 .upgrades {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
+  grid-gap: 5px;
   justify-content: center;
 }
 
@@ -10,8 +10,10 @@
   margin: 10px;
   padding: 20px;
   border: 1px solid #a18600;
-  border-radius: 50%;
+  border-radius: 40%;
   text-align: center;
+  box-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
+  font-family: "Playfair Display", serif;
 }
 .upgrade h2 {
   font-size: 1rem;
@@ -19,6 +21,7 @@
 
 .upgrades h1 {
   font-family: "Jacques Francois Shadow", serif;
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
   grid-column: span 2;
   font-size: 5rem;
   margin-top: -10px;
